--- a/BACK/package.json
+++ b/BACK/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nodeputainjs",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-simple": "^0.5.6",
@@ -24,5 +24,6 @@
     "util": "^0.12.5",
     "uuid": "^9.0.1",
     "ws": "^8.17.0"
-  }
+  },
+  "description": ""
 }
